CHANGES.txt - 02/10/2004
------------------------

CHANGES IN HTMLDOC v1.8.24

    NEW FEATURES

	- HTMLDOC now offers an "htmlsep" output type which
	  generates HTML output with a separate file for each
	  heading in the table of contents.
	- HTMLDOC now includes LINK elements in generated HTML
	  so that intelligent browsers like Mozilla can show
	  next/prev/contents/top buttons.
	- HTMLDOC now supports the BORDERCOLOR attribute for
	  tables, a MSIE extension.
	- The "strict HTML" mode now reports unresolved local
	  links.
	- Added support for HP LaserJet 5000 and Xerox DocuPrint
	  2000/100 printer commands.
	- Added multiple header/footer image support.

    CHANGES

	- The command-line now allows --fontsize values from 4
	  to 26 to match the GUI.
	- Now use a 0.001 point tolerance when checking for
	  content that overflows the page/cell.
	- HTMLDOC no longer enables interpolation of 2-color
	  images.
	- The default vertical alignment of images is "BOTTOM"
	  to match the HTML specification.
	- Paragraph spacing is only applied to the first table
	  after a paragraph.
	- The tabloid media size was 10 points too short in
	  length.
	- The table formatter now subtracts the outside border
	  and padding widths for percentage-based widths.  This
	  helps to eliminate "truncation or overlapping" errors.
	- Dropped support for FLTK 1.0.x when building the GUI.
	- The default vertical alignment is now "bottom" inside
	  paragraphs to correctly align different sized text and
	  images to the baseline.
	- Indexed images are now written as PDF image objects when
	  encryption is enabled; this works around a serious bug in
	  Acrobat 6 which tries to decrypt the colormap of in-line
	  images twice, causing some very strange colors!

    BUG FIXES

	- Switching between landscape and portrait orientations
	  would cause margin creepage.
	- Images did not default to align=bottom, and the
	  align=bottom line spacing calculation was incorrect.