@@ -66,6 +66,8 @@
 	Acrobat 6 which tries to decrypt the colormap of in-line
 	images twice, causing some very strange colors!
 
+	<LI>Table captions can now be bottom aligned.
+
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
 	<LI>Switching between landscape and portrait orientations
